--- a/FutsalScore/Base.lproj/Main.storyboard
+++ b/FutsalScore/Base.lproj/Main.storyboard
@@ -71,6 +71,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="contacts" id="fwb-rN-2Uo"/>
+                    <navigationItem key="navigationItem" id="O8M-Y2-bPg"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics" barStyle="black"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
@@ -79,7 +80,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ogr-Mp-5d2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1772" y="-400"/>
+            <point key="canvasLocation" x="1932" y="-1444"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TXJ-K5-1ls">
+            <objects>
+                <navigationController id="B8f-g0-LdO" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="C96-Q5-bGH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2KU-Iw-1ah" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1027" y="-1185"/>
         </scene>
         <!--Member Register View Controller-->
         <scene sceneID="Xh7-lE-cs5">
@@ -118,12 +133,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8HE-jl-drI">
-                                <rect key="frame" x="241" y="174" width="136" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z0f-8k-A5X">
-                                <rect key="frame" x="498" y="178" width="140" height="30"/>
+                                <rect key="frame" x="498" y="174" width="136" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -157,6 +167,11 @@
                                     <action selector="registerButton:" destination="Khh-Zy-Ho6" eventType="touchUpInside" id="qvN-e2-nNv"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z0f-8k-A5X">
+                                <rect key="frame" x="219" y="174" width="140" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -331,7 +346,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4pD-x3-d23" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="170" y="-507"/>
+            <point key="canvasLocation" x="58" y="-525"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="QeU-mM-g16">
